--- a/评估使用手册.md
+++ b/评估使用手册.md
@@ -6,7 +6,8 @@
   ```bash
   python run.py --models hf_opt_350m hf_opt_125m --datasets siqa_gen winograd_ppl
   ```
-如上所示，评估使用的模型是hf_opt_350m与hf_opt_125m，使用的数据集为siqa_gen与winograd_ppl。在这里为了方便大家的使用，我将之前提到几种评估模式的启动命令提供给大家，这里以Qwen 7B模型为例子。
+如上所示，评估使用的模型是hf_opt_350m与hf_opt_125m，使用的数据集为siqa_gen与winograd_ppl。在这里为了方便大家的使用，我将之前提到几种评估模式的启动命令提供给大家，这里以Qwen-chat 7B模型为例子。
+通用能力涵盖考试能力、知识能力、语言能力、理解能力、推理能力、安全能力，共计六大维度构造立体全面的模型能力评价体系。
 ### 单一评估
 只对六大通用能力之一进行评估工作，并且只评估该能力对应的一个数据集。评估耗时相对最少。
 #### 语言
@@ -29,9 +30,15 @@
 ```bash
   python run.py --models hf_qwen_7b_chat --datasets drop_gen
   ```
+#### 安全
+```bash
+  python run.py --models hf_qwen_7b_chat --datasets jigsawmultilingual_clp
+  ```
 ### 基础评估
 对六大通用能力都进行评估，但只评估每一个能力对应的一个数据集。评估耗时中等。
-
+  ```bash
+  python run.py --models hf_qwen_7b_chat --datasets winogrande_ppl commonsenseqa_ppl siqa_ppl ceval_ppl drop_gen jigsawmultilingual_clp
+  ```
 ### 全面评估
-对六大通用能力都进行评估，并且评估每一个能力对应的每一个数据集。评估耗时相对最多。
+对六大通用能力都进行评估，并且评估每一个能力对应的每一个数据集。评估耗时相对最多。暂时不提供，评估耗时过久。
 
