--- a/评估使用手册.md
+++ b/评估使用手册.md
@@ -41,4 +41,33 @@
   ```
 ### 全面评估
 对六大通用能力都进行评估，并且评估每一个能力对应的每一个数据集。评估耗时相对最多。暂时不提供，评估耗时过久。
+## 模型参数配置
+对于模型参数配置，主要配置的是模型参数的路径，tokenizer的路径以及微调后模型的路径。调整这些参数的位置在opencompass/configs/models/目录下。以Qwen-chat 7B模型为例子，
+其参数的位置在opencompass/configs/models/qwen/hf_qwen_7b_chat.py
+```python
+models = [
+    dict(
+        type=HuggingFaceCausalLM,
+        abbr='qwen-7b-chat-hf',
+        path="/ssd/ssli/Qwen/Qwen-7B-Chat",                 #模型参数的路径
+        tokenizer_path='/ssd/ssli/Qwen/Qwen-7B-Chat',       #tokenizer的路径
+        peft_path='/ssd/tjwu/output_qwen/checkpoint-35000', #微调后模型的路径
+        model_kwargs=dict(
+            device_map='auto',
+            trust_remote_code=True
+        ),
+        tokenizer_kwargs=dict(
+            padding_side='left',
+            truncation_side='left',
+            trust_remote_code=True,
+            use_fast=False,),
+        pad_token_id=151643,
+        max_out_len=100,
+        max_seq_len=2048,
+        batch_size=24,
+        meta_template=_meta_template,
+        run_cfg=dict(num_gpus=4, num_procs=1),
+    )
+]
+```
 
