--- a/评估使用手册.md
+++ b/评估使用手册.md
@@ -71,8 +71,8 @@ models = [
     )
 ]
 ```
-## 📖 数据集支持
-
+## 数据集支持
+目前支持的数据集如下表所示，后续会不断更新。
 <table align="center">
   <tbody>
     <tr align="center" valign="bottom">
