--- a/评估记录.md
+++ b/评估记录.md
@@ -1,8 +1,8 @@
 # 评估记录
-'''text
+```text
 dataset    version    metric    mode      qwen-7b-chat-hf
 ---------  ---------  --------  ------  -----------------
 adgen      2cb4a4     rouge1    gen                 28.83
 adgen      2cb4a4     rouge2    gen                  5.51
 adgen      2cb4a4     rougeL    gen                 18.99
-'''
+```
