--- a/评估记录.md
+++ b/评估记录.md
@@ -25,9 +25,11 @@ adgen      2cb4a4     rouge2    gen                    4.27
 adgen      2cb4a4     rougeL    gen                   16.25
 ```
 
-qwen-1——8b-chat模型在广告词生成数据集上结果
+qwen-1_8b-chat模型在广告词生成数据集上结果
+```text
 dataset    version    metric    mode      qwen-1_8b-chat-hf
 ---------  ---------  --------  ------  -------------------
 adgen      2cb4a4     rouge1    gen                   23.3
 adgen      2cb4a4     rouge2    gen                    2.98
 adgen      2cb4a4     rougeL    gen                   13.73
+```
