--- a/评估记录.md
+++ b/评估记录.md
@@ -7,6 +7,14 @@ adgen      2cb4a4     rouge1    gen                 28.83
 adgen      2cb4a4     rouge2    gen                  5.51
 adgen      2cb4a4     rougeL    gen                 18.99
 ```
+qwen-7b-chat广告词数据集微调后模型在广告词生成数据集上结果(prefix)
+```text
+dataset    version    metric    mode      qwen-1_8b-chat-hf
+---------  ---------  --------  ------  -------------------
+adgen      2cb4a4     rouge1    gen                   21.19
+adgen      2cb4a4     rouge2    gen                    2.86
+adgen      2cb4a4     rougeL    gen                   14.16
+```
 qwen-7b-chat模型在广告词生成数据集上结果
 ```text
 dataset    version    metric    mode      qwen-7b-chat-hf
