--- a/评估记录.md
+++ b/评估记录.md
@@ -1,4 +1,4 @@
-# 评估记录
+# 广告词
 qwen-7b-chat广告词数据集微调后模型在广告词生成数据集上结果
 ```text
 dataset    version    metric    mode      qwen-7b-chat-hf
@@ -40,4 +40,22 @@ dataset    version    metric    mode      qwen-1_8b-chat-hf
 adgen      2cb4a4     rouge1    gen                   23.3
 adgen      2cb4a4     rouge2    gen                    2.98
 adgen      2cb4a4     rougeL    gen                   13.73
+```
+# 医疗
+qwen-7b-chat医疗数据集微调后模型在医疗数据集上结果
+```text
+dataset    version    metric    mode      qwen-1_8b-chat-hf
+---------  ---------  --------  ------  -------------------
+htgen      c178ac     rouge1    gen                   22.05
+htgen      c178ac     rouge2    gen                    4.51
+htgen      c178ac     rougeL    gen                   15.59
+```
+
+qwen-7b-chat医疗数据集上结果
+```text
+dataset    version    metric    mode      qwen-1_8b-chat-hf
+---------  ---------  --------  ------  -------------------
+htgen      c178ac     rouge1    gen                   19.07
+htgen      c178ac     rouge2    gen                    4.01
+htgen      c178ac     rougeL    gen                   14.2
 ```
