--- a/评估使用手册.md
+++ b/评估使用手册.md
@@ -1,6 +1,6 @@
 # 评估使用手册
 ## 快速开始
-在 OpenCompass 中，每个评估任务由待评估的模型和数据集组成。评估的入口点是 run.py。用户可以通过命令行或配置文件选择要测试的模型和数据集。run.py就位于OpenCompass主目录下。
+在 Eval 中，每个评估任务由待评估的模型和数据集组成。评估的入口点是 run.py。用户可以通过命令行或配置文件选择要测试的模型和数据集。run.py就位于Eval主目录下。
 最简单的开启评估方式，是用户通过 `--models MODEL1 MODEL2 ...` 和 `--datasets DATASET1 DATASET2 ...` 来指定模型和数据集:
 
   ```bash
