--- a/评估使用手册.md
+++ b/评估使用手册.md
@@ -305,3 +305,8 @@ models = [
 </table>
 
 <p align="right"><a href="#top">🔝返回顶部</a></p>
+## 新增数据集
+
+| 数据集                 | 备注| 例子|
+| --------------------- | --- | --- |
+| adgen                 | 广告词生成数据集，给定商品关键词，生成该商品相应的广告词 |[{"from": "user", "value": "类型#上衣*材质#牛仔布*颜色#白色*风格#简约*图案#刺绣*衣样式#外套*衣款式#破洞"}, {"from": "assistant", "value": "简约而不简单的牛仔外套，白色的衣身十分百搭。衣身多处有做旧破洞设计，打破单调乏味，增加一丝造型看点。衣身后背处有趣味刺绣装饰，丰富层次感，彰显别样时尚。"}] |
