--- a/评估使用手册.md
+++ b/评估使用手册.md
@@ -305,8 +305,10 @@ models = [
 </table>
 
 <p align="right"><a href="#top">🔝返回顶部</a></p>
+
 ## 新增数据集
 
 | 数据集                 | 备注| 例子|
 | --------------------- | --- | --- |
 | adgen                 | 广告词生成数据集，给定商品关键词，生成该商品相应的广告词 |[{"from": "user", "value": "类型#上衣*材质#牛仔布*颜色#白色*风格#简约*图案#刺绣*衣样式#外套*衣款式#破洞"}, {"from": "assistant", "value": "简约而不简单的牛仔外套，白色的衣身十分百搭。衣身多处有做旧破洞设计，打破单调乏味，增加一丝造型看点。衣身后背处有趣味刺绣装饰，丰富层次感，彰显别样时尚。"}] |
+| htgen                 | 医疗问答数据集，给定病人的症状描述，回答相应的治疗建议 |[{"from": "user", "value": "我家的宝宝咳嗽有痰天天早晨起来都会咳嗽，现在也是这样，咳嗽我问他怎么回事他就说嗓子不舒服痒难受就要咳，天天吃的也是比较清淡。我带他去医院看医生说是慢性咽炎啊，不知道什么是慢性咽炎？什么是慢性咽炎？"}, {"from": "assistant", "value": "慢性咽炎是一种常见病，为慢性感染所引起的弥漫性咽部病变，主要是咽部粘膜炎症。多发于成年人，其主要病因有屡发急性咽炎、长期粉尘或有害气体刺激、烟酒过度或其它不良生活习惯、鼻窦炎分泌物刺激、过敏体质或身体抵抗力减低等。慢性咽炎也可以是某些全身性疾病的局部表现。"}] |
