--- a/公用数据集使用说明.md
+++ b/公用数据集使用说明.md
@@ -50,7 +50,7 @@ class BaseDataset(torch.utils.data.Dataset):
 如上面代码所示，BaseDataset主要需要使用者传递三个参数，分别为：
  - `path`：数据集保存的路径，会传递给load函数加载数据集。需要注意的是：**由于数据集存储格式都不相同。因此，对于每一个新的数据集都需要重载load函数，并且load函数的返回要符合要求。这会在下一小节详细描述。**
  - `tokenizer`：模型对应的tokenizer。
- - `preprocess`模型对应的预处理方式。
+ - `preprocess`模型对应的预处理方式函数。
 # load函数
 我们以华佗数据集为例，说明如何重载一个新的数据集对应的load函数
 ```python
@@ -82,4 +82,37 @@ class HTGenDataset(BaseDataset):
 ```
 如上所示，为了减少重复工作。在定义BaseDataset时我们尽量增加可以复用的代码，因此，对于一个新的数据集，我们只需重载load函数即可完成一个新的数据集的定义。
 如代码所示，load函数通过path参数获取数据集的路径，然后读取对应数据集。随后对数据集进行一些处理，使得返回的值为数据列表和label列表。为了方便，我们使用一个字典将他们包了起来。
-注意：**为了能够复用BaseDataset类中其他代码，返回值必须严格按照定义好的格式来。**
+注意：**为了能够复用BaseDataset类中其他代码，返回值必须严格按照定义好的格式来定义。**
+
+# preprocess函数
+将数据集中数据输入到模型中的时候，模型的不同需要对输入进行不同的预处理。这里以千问模型为例子，说明preprocess函数该如何定义。
+```python
+def preprocess(data : str, label : str):
+    data_head = "\n<|im_start|>user\nYou are a helpful assistant.<|im_end|>\n<|im_start|>user\n"
+    data_tail = "<|im_end|>\n<|im_start|>assistant\n"
+    label_head = "\n<|im_start|>assistant\n"
+    label_tail = "<|im_end|>\n"
+    data_ret = data_head + data + data_tail
+    label_ret = label_head + label + label_tail
+    return data_ret,label_ret
+```
+如上代码所示，不同模型的data_head，data_tail，label_head，label_tail。都不相同，需要自行确定。值得注意的是：**"\n"需要在添加在需要换行的地方。**
+
+# 使用示例
+以华佗数据集为例，说明如何使用定义好的数据集类。
+```python
+from ht_gen import HTGenDataset
+from transformers import AutoTokenizer
+tokenizer = AutoTokenizer.from_pretrained("/ssd/tjwu/output_qwen/Qwen-1_8B-Chat/", trust_remote_code=True)
+path = "/ssd/tjwu/huatuo26m-lite/dev.json"
+def preprocess(data : str, label : str):
+    data_head = "\n<|im_start|>user\nYou are a helpful assistant.<|im_end|>\n<|im_start|>user\n"
+    data_tail = "<|im_end|>\n<|im_start|>assistant\n"
+    label_head = "\n<|im_start|>assistant\n"
+    label_tail = "<|im_end|>\n"
+    data_ret = data_head + data + data_tail
+    label_ret = label_head + label + label_tail
+    return data_ret,label_ret
+
+dataset = HTGenDataset(path=path,tokenizer=tokenizer,preprocess=preprocess)
+```
