--- a/大模型的定量分析.md
+++ b/大模型的定量分析.md
@@ -1,1 +1,5 @@
-
+大模型的定量分析
+介绍：通过评测数据集与评测指标客观定量地衡量大模型的性能，间接评估蒸馏，剪枝，微调与量化算法的性能。
+总结: 初步完成了大模型的定量分析的初版代码。包括数据集处理、模型加载与生成、结果的评测与指标计算，第三方评估接口等功能。其中，新增两个自有数据集，新增更灵活的第三方评估接口，新增指标计算与数据集处理接口。
+todo：支持更多种类的大模型，评测数据集与评价指标。与蒸馏，剪枝，微调与量化模块对接。
+进度：80%
