--- a/公用数据集使用说明.md
+++ b/公用数据集使用说明.md
@@ -82,7 +82,7 @@ class HTGenDataset(BaseDataset):
 ```
 如上所示，为了减少重复工作。在定义BaseDataset时我们尽量增加可以复用的代码，因此，对于一个新的数据集，我们只需重载load函数即可完成一个新的数据集的定义。
 如代码所示，load函数通过path参数获取数据集的路径，然后读取对应数据集。随后对数据集进行一些处理，使得返回的值为数据列表和label列表。为了方便，我们使用一个字典将他们包了起来。
-注意：**为了能够复用BaseDataset类中其他代码，返回值必须严格按照定义好的格式来定义。**
+注意：**为了能够复用BaseDataset类中其他代码，返回值必须严格按照定义好的格式来定义。即返回的为两个列表，分别为result_dict['data']代表的数据列表以及 result_dict['label']代表的标签列表。**
 
 # preprocess函数
 将数据集中数据输入到模型中的时候，模型的不同需要对输入进行不同的预处理。这里以千问模型为例子，说明preprocess函数该如何定义。
@@ -116,3 +116,4 @@ def preprocess(data : str, label : str):
 
 dataset = HTGenDataset(path=path,tokenizer=tokenizer,preprocess=preprocess)
 ```
+如上代码所示，使用时只需import HTGenDataset类，传入数据集路径，分词器tokenizer与预处理函数preprocess即可。
