--- a/第三方评估接口.md
+++ b/第三方评估接口.md
@@ -5,3 +5,54 @@
 ```python
 python list_config.py
 ```
+输出的信息如下：
+```python
++-------------------------------------------+
+| Dataset                                   |
+|-------------------------------------------|
+| ARC_c_gen                                 |
+| ARC_c_gen_1e0de5                          |
+| ARC_c_ppl                                 |
+| ARC_c_ppl_2ef631                          |
+| ARC_c_ppl_a450bd                          |
+| ARC_c_ppl_d52a21                          |
+| ARC_e_gen                                 |
+| ARC_e_gen_1e0de5                          |
+| ARC_e_ppl                                 |
+| ARC_e_ppl_2ef631                          |
+| ARC_e_ppl_a450bd                          |
+| ARC_e_ppl_d52a21                          |
++-------------------------------------------+
+```
+后缀的_1e0de5为版本号，使用时只需要使用ARC_c_gen，ARC_c_ppl就行。可以不用添加版本号。下一小节会举例说明。
+# 评估接口-单个数据集评估
+这一评估函数接口直接返回计算出的评价指标，方便其他函数使用这些评价指标进行进一步的操作。首先介绍一下该函数接口的参数列表：
+```python
+def metric(model_name     : str,
+           dataset_name   : str,
+           dataset_path   : str,
+           model          : torch.nn.Module,
+           tokenizer_path : str,
+           meta_template  : dict,
+           max_seq_len    : int = 2048,
+           max_out_len    : int = 100,
+           batch_size     : int = 8,
+           num_gpus       : int = 2) -> dict:
+
+    """Get the config object given args.
+
+    Args:
+        model_name (str) : the name of the torch model to be evaluated.
+        dataset_name (str) : the name of the dataset to be evaluated.
+        dataset_path (str) : the path of the dataset to be evaluated.
+        model (torch.nn.Module) : the torch model to be evaluated.
+        tokenizer_path (str): The path to the tokenizer.
+        meta_template (dict): The model's meta prompt
+    """
+```
+- `model_name`：待评估大模型的名称，例如：Qwen。
+- `dataset_name`：待评估数据集的名称，例如：ARC_c_gen，ARC_c_ppl。_gen，_ppl是选择不同推理模式。ppl模式评估会快一些。
+- `dataset_path`：打包好的数据集根目录。
+- `model`：加载好的，待评估大模型。
+- `tokenizer_path`：tokenizer路径。
+- `meta_template`：输入模型最原始的prompt。
