--- a/第三方评估接口.md
+++ b/第三方评估接口.md
@@ -56,3 +56,74 @@ def metric(model_name     : str,
 - `model`：加载好的，待评估大模型。
 - `tokenizer_path`：tokenizer路径。
 - `meta_template`：输入模型最原始的prompt。
+下面介绍一下具体使用方法：
+
+```python
+import os
+os.environ['CUDA_VISIBLE_DEVICES'] = '0'
+from transformers import AutoConfig, AutoTokenizer, LlamaForCausalLM, TextStreamer,AutoModelForCausalLM
+import  json
+from llm_one.eval.eval.metrics.metric_third_party import metric
+import torch
+
+path = "/ssd/tjwu/output_qwen/Qwen-1_8B-Chat/"
+model = AutoModelForCausalLM.from_pretrained(path, trust_remote_code=True).eval().to("cuda:0")
+meta_template = dict(
+    round=[
+        dict(role="HUMAN", begin='\n<|im_start|>user\n', end='<|im_end|>'),
+        dict(role="BOT", begin="\n<|im_start|>assistant\n", end='<|im_end|>', generate=True),
+    ],
+)
+metric("Qwen","ht_gen","/ssd/tjwu/test_opencompass/data",model,'/ssd/yhjiang/Models/Qwen-1-8B-Chat/',meta_template)
+```
+
+# 评估接口-多个数据集评估
+这一评估函数接口可以评估多个数据集，同时也是支持传入加载好的模型。由于会评估多个数据集，最后也会将多个结果总结好，以表格的形式打印出来。首先介绍一下该函数接口的参数列表：
+```python
+def metric(model_name     : str,
+           dataset_name   : List[str],
+           dataset_path   : str,
+           model          : Any,           
+           tokenizer_path : str,
+           meta_template  : dict,
+           max_seq_len    : int = 2048,
+           max_out_len    : int = 100,
+           batch_size     : int = 8,
+           num_gpus       : int = 2):
+
+    """Get the config object given args.
+
+    Args:
+        model_name (str) : the name of the model to be evaluated.
+        dataset_name (List[str]) : the datasets to be evaluated.
+        dataset_path (str) : the path of the dataset to be evaluated.
+        model  : the model to be evaluated.
+        tokenizer_path (str): The path to the tokenizer.
+        meta_template (dict): The model's meta prompt
+    """
+```
+- `model_name`：待评估大模型的名称，例如：Qwen。
+- `dataset_name`：待评估数据集的名称，例如：["siqa_ppl","winogrande_ppl"]。
+- `dataset_path`：打包好的数据集根目录。
+- `model`：加载好的，待评估大模型。
+- `tokenizer_path`：tokenizer路径。
+- `meta_template`：输入模型最原始的prompt。
+下面介绍一下具体使用方法：
+```python
+import os
+os.environ['CUDA_VISIBLE_DEVICES'] = '0'
+from transformers import AutoConfig, AutoTokenizer, LlamaForCausalLM, TextStreamer,AutoModelForCausalLM
+import  json
+from llm_one.eval.eval.metrics.metric_vis import metric
+import torch
+
+path = "/ssd/tjwu/output_qwen/Qwen-1_8B-Chat/"
+model = AutoModelForCausalLM.from_pretrained(path, trust_remote_code=True).eval().to("cuda:0")
+meta_template = dict(
+    round=[
+        dict(role="HUMAN", begin='\n<|im_start|>user\n', end='<|im_end|>'),
+        dict(role="BOT", begin="\n<|im_start|>assistant\n", end='<|im_end|>', generate=True),
+    ],
+)
+metric("Qwen",["siqa_ppl","winogrande_ppl"],"/ssd/tjwu/test_opencompass/data",model,'/ssd/yhjiang/Models/Qwen-1-8B-Chat/',meta_template)
+```
